// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/post_view/DateSeparator should render date with timezone enabled 1`] = `
<DateSeparator
  date={2018-01-12T20:15:13.000Z}
  enableTimezone={true}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatDateToParts": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": "Etc/UTC",
    }
  }
  timeZone="Australia/Sydney"
>
  <BasicSeparator>
    <div
      className="Separator BasicSeparator"
    >
      <hr
        className="separator__hr"
      />
      <div
        className="separator__text"
      >
        <RecentDate
          day="2-digit"
          month="short"
          timeZone="Australia/Sydney"
          value={2018-01-12T20:15:13.000Z}
          weekday="short"
          year="numeric"
        >
          <FormattedDate
            day="2-digit"
            month="short"
            timeZone="Australia/Sydney"
            value={2018-01-12T20:15:13.000Z}
            weekday="short"
            year="numeric"
          >
            <span>
              Sat, Jan 13, 2018
            </span>
          </FormattedDate>
        </RecentDate>
      </div>
    </div>
  </BasicSeparator>
</DateSeparator>
`;

exports[`components/post_view/DateSeparator should render date without timezone 1`] = `
<DateSeparator
  date={2018-01-12T12:15:13.000Z}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatDateToParts": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": "Etc/UTC",
    }
  }
>
  <BasicSeparator>
    <div
      className="Separator BasicSeparator"
    >
      <hr
        className="separator__hr"
      />
      <div
        className="separator__text"
      >
        <RecentDate
          day="2-digit"
          month="short"
          value={2018-01-12T12:15:13.000Z}
          weekday="short"
          year="numeric"
        >
          <FormattedDate
            day="2-digit"
            month="short"
            value={2018-01-12T12:15:13.000Z}
            weekday="short"
            year="numeric"
          >
            <span>
              Fri, Jan 12, 2018
            </span>
          </FormattedDate>
        </RecentDate>
      </div>
    </div>
  </BasicSeparator>
</DateSeparator>
`;

exports[`components/post_view/DateSeparator should render date without timezone enabled 1`] = `
<DateSeparator
  date={2018-01-12T12:15:13.000Z}
  enableTimezone={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatDateToParts": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": "Etc/UTC",
    }
  }
  timeZone="Australia/Sydney"
>
  <BasicSeparator>
    <div
      className="Separator BasicSeparator"
    >
      <hr
        className="separator__hr"
      />
      <div
        className="separator__text"
      >
        <RecentDate
          day="2-digit"
          month="short"
          value={2018-01-12T12:15:13.000Z}
          weekday="short"
          year="numeric"
        >
          <FormattedDate
            day="2-digit"
            month="short"
            value={2018-01-12T12:15:13.000Z}
            weekday="short"
            year="numeric"
          >
            <span>
              Fri, Jan 12, 2018
            </span>
          </FormattedDate>
        </RecentDate>
      </div>
    </div>
  </BasicSeparator>
</DateSeparator>
`;
